<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulates_info">Parabens agora voce acaba de ganhar 100 mil por se registrar</string>
    <string name="congrats_continue">Continuar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="access">Acessar</string>
    <string name="register">Registrar-se</string>
    <string name="name">name</string>
</resources>